--- a/app/src/main/res/layout/activity_notes_editor.xml
+++ b/app/src/main/res/layout/activity_notes_editor.xml
@@ -10,14 +10,32 @@
 
 
     <EditText
+        android:id="@+id/title"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="10dp"
+        android:backgroundTint="@android:color/transparent"
+        android:ems="10"
+        android:gravity="top"
+        android:hint="Title"
+        android:inputType="textImeMultiLine"
+        android:padding="5dp"
+        android:textColor="@android:color/black"
+        android:textSize="18sp"
+        android:textStyle="bold" />
+
+    <EditText
         android:id="@+id/content"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_margin="10dp"
+        android:backgroundTint="@android:color/transparent"
         android:ems="10"
         android:gravity="top"
-        android:inputType="text"
+        android:hint="content"
+        android:inputType="text|textMultiLine|textImeMultiLine"
         android:padding="5dp"
         android:textColor="@android:color/black"
         android:textSize="14sp" />
+
 </LinearLayout>
