--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,23 +6,45 @@
     android:layout_height="match_parent"
     tools:context="com.example.android.notes.MainActivity">
 
+    <!-- Title Bar -->
 
-    <ListView
-        android:id="@+id/listView"
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/titleBar">
+
+        <include layout="@layout/app_bar" />
+
+    </RelativeLayout>
+
+    <!-- List item using recycler view -->
+
+    <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:background="@android:color/background_light"
-        android:cacheColorHint="@android:color/background_dark"/>
+        android:layout_below="@id/titleBar">
 
-    <ImageButton
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/rv_list_notes"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+        </android.support.v7.widget.RecyclerView>
+
+
+    </FrameLayout>
+
+    <!-- Add icon -->
+
+    <android.support.design.widget.FloatingActionButton
+
         android:id="@+id/addicon"
-        android:layout_width="150dp"
-        android:layout_height="150dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="30dp"
+        android:layout_marginBottom="30dp"
         android:background="@android:color/background_light"
-        app:srcCompat="@drawable/addicon"
-        android:onClick="addicon"
+        app:srcCompat="@drawable/ic_add_new"
         android:layout_alignParentBottom="true"
         android:layout_alignParentEnd="true" />
 
