--- a/app/src/main/res/layout/activity_notes_editor.xml
+++ b/app/src/main/res/layout/activity_notes_editor.xml
@@ -1,41 +1,55 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_margin="5dp"
-    android:orientation="vertical"
     tools:context="com.example.android.notes.notesEditor">
 
-
-    <EditText
-        android:id="@+id/title"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="10dp"
-        android:backgroundTint="@android:color/transparent"
-        android:ems="10"
-        android:gravity="top"
-        android:hint="Title"
-        android:inputType="textImeMultiLine"
-        android:padding="5dp"
-        android:textColor="@android:color/black"
-        android:textSize="18sp"
-        android:textStyle="bold" />
-
-    <EditText
-        android:id="@+id/content"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_margin="10dp"
-        android:backgroundTint="@android:color/transparent"
-        android:ems="10"
-        android:gravity="top"
-        android:hint="content"
-        android:inputType="text|textMultiLine|textImeMultiLine"
-        android:padding="5dp"
-        android:textColor="@android:color/black"
-        android:textSize="14sp" />
+        android:layout_margin="20dp"
+        android:orientation="vertical">
 
-</LinearLayout>
+        <EditText
+            android:id="@+id/title"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"
+            android:backgroundTint="@android:color/transparent"
+            android:ems="10"
+            android:gravity="top"
+            android:hint="Title"
+            android:inputType="textImeMultiLine"
+            android:padding="5dp"
+            android:textColor="@android:color/black"
+            android:textSize="18sp"
+            android:textStyle="bold" />
+
+        <EditText
+            android:id="@+id/content"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_margin="10dp"
+            android:backgroundTint="@android:color/transparent"
+            android:ems="10"
+            android:gravity="top"
+            android:hint="content"
+            android:inputType="text|textMultiLine|textImeMultiLine"
+            android:padding="5dp"
+            android:textColor="@android:color/black"
+            android:textSize="14sp" />
+
+    </LinearLayout>
+
+    <!--<android.support.design.widget.FloatingActionButton-->
+        <!--android:id="@+id/clear"-->
+        <!--android:layout_width="30dp"-->
+        <!--android:layout_height="30dp"-->
+        <!--android:layout_alignParentEnd="true"-->
+        <!--android:layout_marginEnd="10dp"-->
+        <!--android:layout_marginTop="10dp"-->
+        <!--android:src="@drawable/ic_clear"/>-->
+
+</RelativeLayout>
