--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorPrimary">#396849</color>
+    <color name="colorPrimaryDark">#1b402d</color>
+    <color name="colorAccent">#d21704</color>
+
+    //title color
+    <color name="title">#212121</color>
 </resources>
