--- a/app/src/main/res/layout/notes_list.xml
+++ b/app/src/main/res/layout/notes_list.xml
@@ -12,6 +12,11 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center_vertical|start"
         android:textSize="24sp"
+        android:padding="3dp"
         tools:text="Note 1"/>
+    <View
+        android:layout_width="fill_parent"
+        android:layout_height="1dip"
+        android:background="@android:color/darker_gray" />
 
 </LinearLayout>
