--- a/app/src/main/res/layout/notes_list.xml
+++ b/app/src/main/res/layout/notes_list.xml
@@ -4,6 +4,8 @@
     android:layout_height="wrap_content"
     android:orientation="vertical"
     xmlns:tools="http://schemas.android.com/tools"
+    android:layout_marginTop="3dp"
+    android:layout_marginBottom="3dp"
     android:padding="8dp"
     android:background="@drawable/background_border">
 
