--- a/app/src/main/res/layout/notes_list.xml
+++ b/app/src/main/res/layout/notes_list.xml
@@ -1,21 +1,47 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:orientation="vertical"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_marginTop="3dp"
-    android:layout_marginBottom="3dp"
-    android:padding="8dp"
-    android:background="@drawable/background_border">
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content">
 
-    <TextView
-        android:id="@+id/tv_note_title"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:id="@+id/linearLayout"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_vertical|start"
-        android:textSize="24sp"
-        android:padding="3dp"
-        tools:text="Note 1"/>
+        android:layout_marginTop="3dp"
+        android:padding="5dp"
+        android:orientation="horizontal"
+        android:weightSum="100">
 
-</LinearLayout>
+        <TextView
+            android:id="@+id/tv_note_title"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical|start"
+            android:textSize="24sp"
+            android:padding="3dp"
+            tools:text="Note 1"
+            android:textColor="#000"
+            android:layout_weight="95"/>
+
+        <TextView
+            android:id="@+id/date_text_view"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            tools:text="12:30"
+            android:padding="3dp"
+            android:textSize="12sp"
+            android:layout_weight="5"
+            android:layout_gravity="center_vertical" />
+
+    </LinearLayout>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:layout_below="@id/linearLayout"
+        android:background="#000000"/>
+
+
+</RelativeLayout>
